# structpath

./: .gitignore  Cargo.toml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: API.md  generate_stubs.py  index.md  variables.md
libs/structpath/: 404.html  index.html  objects.inv  sitemap.xml
libs/structpath/API/: index.html
libs/structpath/search/: search_index.json
libs/structpath/structpath/: __init__.py
libs/structpath/variables/: index.html
python/structpath/: __init__.py
python/tests/: base.py  test_build.py  test_docs.py  test_errors.py  test_get.py  test_iter.py  test_parse.py  test_walk.py  test_write.py  type_tests.py
src/: access.rs  format.rs  iter.rs  lib.rs  parse.rs  serialization.rs  types.rs  walk.rs  write.rs
src/tests/: integration_tests.rs
